virtual machines/ubuntu-minikube/Kubernetes/hasicorp vault/vault-ext-in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ext-in
  namespace: vault
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/limit-connections: "1"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.11.12.0/24,192.168.192.0/24
spec:
  tls:
  - hosts:
    - vault-aleixohome.ddns.net
    secretName: aleixohome-ssl
  rules:
  - host: vault-aleixohome.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
