virtual machines/ubuntu-minikube/Kubernetes/hasicorp vault/vault-in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-in
  namespace: vault
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - vault.aleixohome.lan
    secretName: aleixohome-ssl
  rules:
  - host: vault.aleixohome.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
